test/libsolidity/errorRecoveryTests/wrong_compiler_recovers_2.sol
pragma solidity ^99.99.0;
this is surely invalid
// ----
// ParserError 7858: (26-30): Expected pragma, import directive or contract/interface/library/struct/enum/function definition.
